# RustMacro

./: Cargo.toml  Makefile  README.md  TODO.md  config.toml
src/: bus.rs  channel.rs  config.rs  events.rs  main.rs  utils.rs
src/common/: comm_bus.rs  events.rs  mod.rs  thread.rs
src/device/: device.rs  keyboard.rs  mod.rs  mouse.rs  position.rs  uinput.rs
src/engine/: engine.rs  handler.rs  mod.rs
src/engine/macro/: animation_cancel.rs  mod.rs
src/engine/workers/: infinite.rs  mod.rs  oneshot.rs
src/event/: parser.rs  types.rs
src/input/: listener.rs  mod.rs  monitor.rs  parser.rs
src/macro/: action.rs  animation_cancel.rs  engine.rs  generic.rs  mod.rs  registry.rs  skull_caverns.rs  traits.rs
src/macro/scripts/: animation_cancel.rs  gamble_coins.rs  mod.rs  skull_caverns.rs  tree_break.rs  utils.rs
src/thread/: infinite_macro.rs  input_listener.rs  mod.rs  named_thread.rs  oneshot_macro.rs
src/virtual/: device.rs  keyboard.rs  mod.rs  mouse.rs
