[package]
name = "RustMacro"
version = "1.0.0"
authors = ["Ethan Dankiw"]
rust-version = "1.91.1"
description = "A Rust base auto hotkey application that allows macros to be programmed and executed"
edition = "2024"

[dependencies]
ctrlc = "3.4"
input-linux = "0.7.1"
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.12+spec-1.1.0"
